--- a/webapp/index.html
+++ b/webapp/index.html
@@ -3,41 +3,19 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ЮФЛ Сибирь</title>
+    <title>Fantasy League</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <div id="menu" class="page active">
-        <h1>Турнир ЮФЛ Сибирь</h1>
-        <button class="button" onclick="showPage('field')">Перейти на футбольное поле</button>
-        <button class="button" onclick="showPage('support')">Поддержка</button>
-        <button class="button" onclick="showPage('stats')">Статистика</button>
-    </div>
 
-    <div id="field" class="page">
-        <h2>Футбольное поле</h2>
-        <div id="cards">
-            <button class="button" onclick="toggleCard(1)">Карточка 1 (К)</button>
-            <button class="button" onclick="toggleCard(2)">Карточка 2 (К)</button>
-            <button class="button" onclick="toggleCard(3)">Карточка 3 (К)</button>
-            <button class="button" onclick="toggleCard(4)">Карточка 4 (К)</button>
-            <button class="button" onclick="toggleCard(5)">Карточка 5 (К)</button>
-            <button class="button" onclick="toggleCard(6)">Карточка 6 (К)</button>
-            <button class="button" onclick="toggleCard(7)">Карточка 7 (К)</button>
-        </div>
-        <button class="button" onclick="showPage('menu')">Назад</button>
-    </div>
-
-    <div id="support" class="page">
-        <h2>Поддержка</h2>
-        <p>Здесь будет информация о правилах игры.</p>
-        <button class="button" onclick="showPage('menu')">Назад</button>
-    </div>
-
-    <div id="stats" class="page">
-        <h2>Статистика</h2>
-        <p id="stats-content">Загружаем...</p>
-        <button class="button" onclick="showPage('menu')">Назад</button>
+    <div class="field">
+        <div class="player"><span class="player-name">РРіСЂРѕРє 1</span></div>
+        <div class="player"><span class="player-name">РРіСЂРѕРє 2</span></div>
+        <div class="player"><span class="player-name">РРіСЂРѕРє 3</span></div>
+        <div class="player"><span class="player-name">РРіСЂРѕРє 4</span></div>
+        <div class="player"><span class="player-name">РРіСЂРѕРє 5</span></div>
+        <div class="player"><span class="player-name">РРіСЂРѕРє 6</span></div>
+        <div class="player"><span class="player-name">РРіСЂРѕРє 7</span></div>
     </div>
 
     <script src="script.js"></script>
